k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: simple-blog-backend-service
spec:
  selector:
    app: simple-blog-backend
  ports:
  - port: 5000  # Match backend-deployment.yaml
    targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: simple-blog-frontend-service
spec:
  selector:
    app: simple-blog
  ports:
  - port: 80
    targetPort: 80
